--- a/projects/index.html
+++ b/projects/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -31,7 +31,7 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="#">Projects</a>
                     </li>
@@ -42,7 +42,7 @@
                         <a href="https://www.linkedin.com/in/justinmiron">LinkedIn</a>
                     </li>
                      <li>
-                        <a href="JustinMironResume7-22-15.pdf">Resume</a>
+                        <a href="../JustinMironResume8-17-15.pdf">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -51,7 +51,7 @@
         <!-- /.container -->
     </nav>
 
-    <div class="row">
+    <div class="row project-row">
         <div class="col-lg-12">
             <h1 class="page-header">Projects
                 <small>Completed</small>
@@ -60,19 +60,27 @@
     </div>
 
     <!-- Projects Row -->
-    <div class="projects">
+    <div class="projects project-row">
 
         <div class="row project-row" name="upnext">
             <div class="col-md-6">
-                <a href="#">
-                    <img class="img-responsive project-img" src="../images/upnext.png" alt="">
-                </a>
+                <img class="img-responsive project-img" src="../images/upnext.png" alt="">
             </div>
             <div class="col-md-6 project-item">
                 <h2><b>UpNext Group Jukebox</b></h2>
                 <h3>HTML - AngularJS - NodeJS - Mopidy</h3>
-                <br>
-                <p>A collaborative spotify queue created at the corporate Viasat 2015 Hackathon. Geared at users within group settings to better share song choice. The queue reflects the votes of users on songs.  Built using a Mopidy server and libspotify. The backend utilized a NodeJS server that managed the queue and handled interactions with the Mopidy server.</p>
+                <p>
+                A collaborative playlist queue with spotify integration created at the corporate Viasat 2015 Hackathon.
+                </p>
+                <p>
+                The jukebox works based on a system of voting for tracks within a shared playlist. This is geared at music choice within group settings. The order of the next played queue is based off of the users' votes on songs.
+                </p>
+                <p>
+                The app consisted of a front-end consisted of a web app built with HTML and AngularJS that interacted with the back-end node.JS server that handled interactions with the external Mopidy server.
+                </p>
+                <p>
+                My contribution was the back-end Node.JS server. The server handled input from the clients through HTTP requests and used that information to interact with the music server as well as manage the song queue.
+                </p>
             </div>
         </div>
 
@@ -88,8 +96,15 @@
              <div class="col-md-6 project-item">
                 <h2><b>Music Swap</b></h2>
                 <h3>Java - NodeJS - mongoDB</h3>
-                <br>
-                <p>A music artist sharing android app based around matching users with similar preferences. Allows the user to build a profile based on artists they like and allows them to either begin a chat or an exchange artist interface with matches. The android app communicates with the nodeJS server over websockets. The backend consists of a nodeJS server which communicates with a mongodb server.</p>
+                <p>
+                A music artist sharing android app based around matching users with similar preferences. Users that had similar tastes are able to recommend artists to one another.
+                </p>
+                <p>
+                The front-end of the app was built in Android Studio and allowed the user to set up a profile as well as send requests to the server to find matches based on the profile. The front-end used the LastFM API to request and store album and artist art to enhance the visuals of the app. A websocket wrapper for Java was also used to communicate with the Node.JS back-end.
+                </p>
+                <p>
+                The Node.JS server's main purpose was to manage the mongoDB server. Through repeated queries, the node.JS server would two clients with an artist match and send a reply back to the clients as well as store the information to keep the two connected. Following a connection clients were able to send artist names to eachother to share music tastes.
+                </p>
             </div>
         </div>
 
@@ -114,49 +129,30 @@
                 <h3>Java - Node.JS - mongoDB - Google Maps API</h3>
                 <br>
                 <p>
-                A current group project involving managing events. My contribution is mostly on the back-end node.js server as well as managing the mongoDB database, as well as Google Map integration and API calls.
+                A current group project involving managing events. 
+                </p>
+                <p>My contribution is mostly on the back-end node.js server as well as managing the mongoDB database, as well as Google Map integration and Google API calls.
+                </p>
+                <p>
                 Thus far we planned features as well as well as designed the UI. We have come up with what is neccessary to get the app in a working state and have begun coding.
                 </p>
             </div>
-        </div>
 
-        <hr>
-
-        <div class="row project-row" name="bootloader">
-            <!-- <div class="col-md-6">
-                <a href="#">
-                    <img class="img-responsive project-img" src="http://placehold.it/700x350" alt="">
-                </a>
-            </div> -->
-            <div class="col-md-6 project-item">
-                <h2><b>ATMega328p Bootloader</b></h2>
-                <h3>Android Shield</h3>
+             <div class="col-md-6 project-item">
+                <h2><b>Koala Window Manager</b></h2>
+                <h3>C - XCB Libraries</h3>
                 <br>
                 <p>
-                A current project that will ease my ability to bootload AVR microcontrollers, specifically the ATMega328p and eventually the ATTiny. I have been tinkering with embedded systems being controlled by AVR microcontrollers and this project will ease prototyping.
+                A dynamic tiling window manager for X11 being worked on with a partner.
+                </p>
+                <p>
+                The window manager currently supports handling keybindings for window managment, redirection of requests to the window manager, as well as handling those requests including mapping of windows.
+                </p>
+                <p>
+                We are currently working on tiling algorithms as well as multiple desktop support.
                 </p>
             </div>
         </div>
-
-        <hr>
-
-        <div class="row project-row" name="apartmenthelper">
-            <!-- <div class="col-md-6">
-                <a href="#">
-                    <img class="img-responsive project-img" src="http://placehold.it/700x350" alt="">
-                </a>
-            </div> -->
-            <div class="col-md-6 project-item">
-                <h2><b>Apartment Helper</b></h2>
-                <h3>Java - ?</h3>
-                <br>
-                <p>
-                An app being worked on with a friend based around managing an apartment involving bills, messy roommates, and accountability amongst roommates. For the most part this app began as a small joke, but is beginning to progress towards something viable.
-                </p>
-            </div>
-        </div>
-
-
 
 
     </div>
