--- a/index.html
+++ b/index.html
@@ -12,16 +12,52 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/frontpage.css" rel="stylesheet">
+    <link href="css/shared.css" rel="stylesheet">
 </head>
 
+ <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="../">Justin Miron</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#">Projects</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/jmiron11">GitHub</a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/justinmiron">LinkedIn</a>
+                    </li>
+                     <li>
+                        <a href="../JustinMironResume8-17-15.pdf">Resume</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
 <body>
-
-<<<<<<< HEAD
-Currently a work in progress
-=======
-
-    <!-- /.container -->
->>>>>>> 8d80536181b5c1cd355c500f247b877ff43f199d
+    <div class="container height-centered">
+        <div class="row row-centered">
+            <img class="img-responsive main-pic img-rounded" src="images/mainpic.jpg">
+            <h1>Justin Miron</h1>
+            <h4>An avid Detroit Red Wings fan. I sometimes also code!</h4>
+        </div>
+    </div>
 
     <!-- scripts -->
     <script src="js/jquery.js"></script>
