--- a/projects/index.html
+++ b/projects/index.html
@@ -12,6 +12,7 @@
 
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/projects.css" rel="stylesheet">
+    <link href="../css/shared.css" rel="stylesheet">
 </head>
 
 <body>
@@ -108,7 +109,28 @@
             </div>
         </div>
 
-        <hr>
+        <div class="row project-row" name="musicswap">
+            <div class="col-md-6">
+                <a href="#">
+                    <img class="img-responsive project-img" src="../images/game.png" alt="">
+                </a>
+            </div>
+
+             <div class="col-md-6 project-item">
+                <h2><b>The Game - Game</b></h2>
+                <h3>C++ - SDL Libraries</h3>
+                <p>
+                A beautiful story telling game following the life of a bouncy ball on his path to find true love.
+                </p>
+                <p>
+                The majority of the code lies in creating the interface with the renderer. The important things that had to be tracked were the geometry of the view window with respective to the level's video memory, the geometry of each object, as well as detecting collisions between objects. Once the level was created, I needed to consider the physics of the ball which consisted of its own velocity, acceleration, and reactions to different collisions. 
+                </p>
+                <p> Finally any stats that want to be displayed can be written to the screen, such as the number of deaths, or text can also be used to tell a beautiful story.
+                </p>
+            </div>
+        </div>
+
+         <hr>
 
         <div class="row">
         <div class="col-lg-12">
@@ -119,24 +141,6 @@
         </div>
 
        <div class="row project-row" name="eventapp">
-            <!-- <div class="col-md-6">
-                <a href="#">
-                    <img class="img-responsive project-img" src="http://placehold.it/700x350" alt="">
-                </a>
-            </div> -->
-            <div class="col-md-6 project-item">
-                <h2><b>The Event App</b></h2>
-                <h3>Java - Node.JS - mongoDB - Google Maps API</h3>
-                <br>
-                <p>
-                A current group project involving managing events. 
-                </p>
-                <p>My contribution is mostly on the back-end node.js server as well as managing the mongoDB database, as well as Google Map integration and Google API calls.
-                </p>
-                <p>
-                Thus far we planned features as well as well as designed the UI. We have come up with what is neccessary to get the app in a working state and have begun coding.
-                </p>
-            </div>
 
              <div class="col-md-6 project-item">
                 <h2><b>Koala Window Manager</b></h2>
