--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">Projects</a>
+                        <a href="./projects/">Projects</a>
                     </li>
                     <li>
                         <a href="https://github.com/jmiron11">GitHub</a>
