--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a href="https://www.linkedin.com/in/justinmiron">LinkedIn</a>
                     </li>
                      <li>
-                        <a href="../JustinMironResume8-17-15.pdf">Resume</a>
+                        <a href="../JustinMironResume.pdf">Resume</a>
                     </li>
                 </ul>
             </div>
