--- a/projects/index.html
+++ b/projects/index.html
@@ -43,7 +43,7 @@
                         <a href="https://www.linkedin.com/in/justinmiron">LinkedIn</a>
                     </li>
                      <li>
-                        <a href="../JustinMironResume8-17-15.pdf">Resume</a>
+                        <a href="../JustinMironResume.pdf">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -108,6 +108,8 @@
                 </p>
             </div>
         </div>
+
+        <hr> 
 
         <div class="row project-row" name="musicswap">
             <div class="col-md-6">
