--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                         <a href="./projects/">Projects</a>
                     </li>
                     <li>
+                        <a href="https://goo.gl/photos/j8PSowp8XVHefviEA">Photos</a>
+                    </li>
+                    <li>
                         <a href="https://github.com/jmiron11">GitHub</a>
                     </li>
                     <li>
@@ -55,7 +58,7 @@
         <div class="row row-centered">
             <img class="img-responsive main-pic img-rounded" src="images/mainpic.jpg">
             <h1>Justin Miron</h1>
-            <h4>An avid Detroit Red Wings fan. I sometimes also code!</h4>
+            <p style="font-size:130%;">I'm a Senior in Computer Engineering at the University of Illinois. I plan on furthering my goal of being a student forever by working towards a PhD after my senior year. My research interests include distributed systems, networks, and high performance computing.</p><p style="font-size:130%;">Outside of acadamia, I love nature, climbing, taking mediocre pictures, and most importantly the Detroit Red Wings.</p>
         </div>
     </div>
 
