--- a/me/index.html
+++ b/me/index.html
@@ -10,9 +10,9 @@
 
     <title>Justin Miron</title>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/frontpage.css" rel="stylesheet">
-    <link href="css/shared.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/frontpage.css" rel="stylesheet">
+    <link href="../css/shared.css" rel="stylesheet">
 </head>
 
  <!-- Navigation -->
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="./me/">Me</a>
+                        <a href="./">Me</a>
                     </li>
                     <li>
                         <a href="https://goo.gl/photos/j8PSowp8XVHefviEA">Photos</a>
@@ -52,26 +52,18 @@
  
 <body>
     <div class="background"></div>
-    <div class="row flex-container">
-        <div class="container-for-container">
-            <div class="flex-col-right">
-                <img class="img-responsive mainpic" src="images/mainpic.jpg">
-            </div>
-            <div class="flex-col-left">
-                <div class="the-name">Justin Miron</div>
-                <p class="the-paragraph"></p>
-                <p class="the-paragraph">Hey! I'm Justin.</p>
-                <p class="the-paragraph">I'm soon to be a first year PhD student at Cornell studying Computer Science. </p>
-                <p class="the-paragraph"> I think distributed systems, computer networks, and operating systems are all pretty sweet so I'm aiming to do research in those areas.</p>
-                <p class="the-paragraph"> I'll be using this as a spot to share pretty much anything, whether it be albums of bands I'm loving, books, photos, maybe even highlight some research. Feel free to look around! </p>
-                </div>
+    <div class="row flex-container-me">
+        <div class="container-for-me">
+            <div class="album-section">
+                <div class="section-header">Music</div>
+                <div class="section-description">I love music. These are a small subset of the albums that have made a difference to me. I made these do sweet things when you click them.</div>
             </div>
         </div>
     </div>
     <!-- </div> -->
     <!-- scripts -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/jquery.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 </body>
 
 </html>
