work in progress

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 <div class="the-name">Justin Miron</div>
                 <p class="the-paragraph"></p>
                 <p class="the-paragraph">Hey! I'm Justin.</p>
-                <p class="the-paragraph">I'm soon to be a first year PhD student at Cornell studying Computer Science. </p>
-                <p class="the-paragraph"> I think distributed systems, computer networks, and operating systems are all pretty sweet so I'm aiming to do research in those areas.</p>
-                <p class="the-paragraph"> I'll be using this as a spot to share pretty much anything, whether it be albums of bands I'm loving, books, photos, maybe even highlight some research. Feel free to look around! </p>
+                <p class="the-paragraph">In order to further my goal of studying forever, I'm soon to be a first year PhD student at Cornell studying Computer Science. </p>
+                <p class="the-paragraph">My research interests include distributed systems, networking, and operating systems.</p>
+                <p class="the-paragraph"> Outside of academia, I love nature, music, taking mediocre pictures, and most importantly the Detroit Red Wings.</p>
                 </div>
             </div>
         </div>
