--- a/me/index.html
+++ b/me/index.html
@@ -57,15 +57,18 @@
         <div class="container-for-me">
             <div class="album-section">
                 <div class="section-header">Music</div>
-                <div class="section-description">I love music. These are some of the album's I've loved over the past few years.</div>
+                <div class="section-description">I love music. These are some of the album's I've loved over the past few years. </div>
                 <div class="album-flex"> 
                     <img id="ruth-nanagrizol-img" class="album-img" src="../images/albums/ruth-nanagrizol.jpg" alt="Ruth, Nana Grizol" width="200" height="200">
                     <div id="ruth-nanagrizol-modal" class="modal album">
                         <span class="close" onclick="document.getElementById('ruth-nanagrizol-modal').style.display='none'">&times;</span>
                          <img class="modal-content album-img" src="../images/albums/ruth-nanagrizol.jpg">
                     </div>
-
                 </div>
+            </div>
+            <div class="book-section">
+                    <div class="section-header">WORK IN PROGRESS</div>
+                    <div class="book-flex">
             </div>
         </div>
     </div>
