--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="./" class="active-page">Home</a>
+                    </li>
+                    <li>
                         <a href="./me/">Me</a>
                     </li>
                     <li>
@@ -54,16 +57,16 @@
     <div class="background"></div>
     <div class="row flex-container">
         <div class="container-for-container">
-            <div class="flex-col-right">
+            <div class="col-sm-6 flex-col-right">
                 <img class="img-responsive mainpic" src="images/mainpic.jpg">
             </div>
-            <div class="flex-col-left">
+            <div class="col-sm-6 flex-col-left">
                 <div class="the-name">Justin Miron</div>
                 <p class="the-paragraph"></p>
                 <p class="the-paragraph">Hey! I'm Justin.</p>
                 <p class="the-paragraph">In order to further my goal of studying forever, I'm soon to be a first year PhD student at Cornell studying Computer Science. </p>
                 <p class="the-paragraph">My research interests include distributed systems, networking, and operating systems.</p>
-                <p class="the-paragraph"> Outside of academia, I love nature, music, taking mediocre pictures, and most importantly the Detroit Red Wings.</p>
+                <p class="the-paragraph"> Outside of academia, I l1ove nature, music, taking mediocre pictures, and most importantly the Detroit Red Wings.</p>
                 </div>
             </div>
         </div>
