--- a/me/index.html
+++ b/me/index.html
@@ -15,7 +15,7 @@
     <link href="../css/shared.css" rel="stylesheet">
 </head>
 
- <!-- Navigation -->
+<!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -32,7 +32,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="./">Me</a>
+                        <a href="../">Home</a>
+                    </li>
+                    <li>
+                        <a href="./" class="active-page">Me</a>
                     </li>
                     <li>
                         <a href="https://goo.gl/photos/j8PSowp8XVHefviEA">Photos</a>
@@ -49,6 +52,7 @@
         </div>
         <!-- /.container -->
     </nav>
+ 
 
 
 <body>
@@ -57,18 +61,36 @@
         <div class="container-for-me">
             <div class="album-section">
                 <div class="section-header">Music</div>
-                <div class="section-description">I love music. These are some of the album's I've loved over the past few years. </div>
+                <div class="section-description"> Some albums that always seem to stick around</div>
                 <div class="album-flex"> 
-                    <img id="ruth-nanagrizol-img" class="album-img" src="../images/albums/ruth-nanagrizol.jpg" alt="Ruth, Nana Grizol" width="200" height="200">
-                    <div id="ruth-nanagrizol-modal" class="modal album">
-                        <span class="close" onclick="document.getElementById('ruth-nanagrizol-modal').style.display='none'">&times;</span>
-                         <img class="modal-content album-img" src="../images/albums/ruth-nanagrizol.jpg">
+                    <div class="album">
+                      <img id="" class="album-img" src="../images/albums/ruth-nanagrizol.jpg" alt="Ruth, Nana Grizol" width="200" height="200">
+                      <!-- <div class="album-name-and-artist">Ruth, Nana Grizol</div> -->
+                      <p class="album-name-and-artist">Ruth - Nana Grizol</p>
+                    </div>
+                    <div class="album">
+                      <img id="" class="album-img" src="../images/albums/joydeparted-snoise.jpg" alt="Joy Departed, Sorority Noise" width="200" height="200">
+                      <p class="album-name-and-artist">Joy, Departed - Sorority Noise</p>
+                    </div>
+                    <div class="album">
+                      <img id="" class="album-img" src="../images/albums/midnightorgan-fr.jpg" alt="The Midnight Organ Flight, Frightened Rabbit" width="200" height="200">
+                      <p class="album-name-and-artist">The Midnight Organ Flight - Frightened Rabbit</p>
+                    </div>
+                     <div class="album">
+                      <img id="" class="album-img" src="../images/albums/donthaveeachother-aawest.jpg" alt="We Don't Have Eachother, Aaron West and the Roaring Twenties" width="200" height="200">
+                      <p class="album-name-and-artist">We Don't Have Eachother - Aaron West and the Roaring Twenties</p>
+                    </div>
+                    <div class="album">
+                      <img id="" class="album-img" src="../images/albums/missitall-modernbaseball.jpg" alt="You're Gonna Miss It All, Modern Baseball" width="200" height="200">
+                      <p class="album-name-and-artist">You're Gonna Miss It All - Modern Baseball</p>
                     </div>
                 </div>
             </div>
             <div class="book-section">
-                    <div class="section-header">WORK IN PROGRESS</div>
+                    <div class="section-header">Books: WORK IN PROGRESS</div>
+                    <div class="section-description"> Reading is fun</div>
                     <div class="book-flex">
+                    </div>
             </div>
         </div>
     </div>
