--- a/me/index.html
+++ b/me/index.html
@@ -65,7 +65,6 @@
                 <div class="album-flex"> 
                     <div class="album">
                       <img id="" class="album-img" src="../images/albums/ruth-nanagrizol.jpg" alt="Ruth, Nana Grizol" width="200" height="200">
-                      <!-- <div class="album-name-and-artist">Ruth, Nana Grizol</div> -->
                       <p class="album-name-and-artist">Ruth - Nana Grizol</p>
                     </div>
                     <div class="album">
@@ -85,6 +84,8 @@
                       <p class="album-name-and-artist">You're Gonna Miss It All - Modern Baseball</p>
                     </div>
                 </div>
+               <!--  <div class="potato">Words</div>
+                <div class="lyric">Cynicism isn't wisdom, it's a lazy way to say that you've been burned </div> -->
             </div>
             <div class="book-section">
                     <div class="section-header">Books: WORK IN PROGRESS</div>
