--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
     <div class="background"></div> 
     <div class="row flex-container">
         <div class="container-for-container">
-            <div class="col-sm-6 flex-col-right">
+            <div class="col-sm-6 flex-col-left">
                 <img class="img-responsive mainpic" src="images/mainpic.jpg">
             </div>
-            <div class="col-sm-6 flex-col-left">
+            <div class="col-sm-6 flex-col-right">
                 <div class="the-name">Justin Miron</div>
                 <p class="the-paragraph"></p>
                 <p class="the-paragraph">Hey! I'm Justin.</p>
-                <p class="the-paragraph">I'm soon to be a first year PhD student at Cornell studying Computer Science. </p>
-                <p class="the-paragraph">My research interests include distributed systems, networking, and operating systems.</p>
-                <p class="the-paragraph"> Outside of academia, I love nature, music, taking mediocre pictures, and most importantly the Detroit Red Wings.</p>
+                <p class="the-paragraph">I'm a PhD student at Cornell University. My research interests include distributed systems, networking, and operating systems.</p>
+                <p class="the-paragraph">My recent work deals with resource disaggregation, a rapidly growing datacenter design where datacenter resources are split into independant pools of resources interconnected over the network.</p>
+                <p class="the-paragraph">Other than the few almost-professional lines above, I'm using this page to mess around, feel free to browse.</p>
                 </div>
             </div>
         </div>
