--- a/index.html
+++ b/index.html
@@ -12,17 +12,26 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/frontpage.css" rel="stylesheet">
     <link href="css/shared.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,500,700" rel="stylesheet">
 </head>
 
  <!-- Navigation -->
 <body>
-    <div class="sidebar-sidebar col-sm-3">
+    <div class="sidebar-sidebar col-sm-2">
         <div class="sidebar-img">
             <img class="img-responsive mainpic" src="images/mainpic.jpg">
         </div>
         <div class="sidebar-name">Justin Miron</div>
+        <div class="sidebar-title">PhD Student</div>
+        <div class="sidebar-uni">Cornell University</div>
+        <div class="sidebar-icons row">
+            <a href="mailto:justinmiron@cs.cornell.edu" class="sidebar-icon"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+            <a href="https://github.com/jmiron11" class="sidebar-icon"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/justinmiron/" class="sidebar-icon"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+            <a href="CV-JustinMiron.pdf" class="sidebar-icon"><i class="fa fa-file-text fa-2x" aria-hidden="true"></i></a>
+        </div>
                         <!-- SIDEBAR MENU -->
-        <div class="sidebar-usermenu">
+        <!-- <div class="sidebar-usermenu">
             <ul class="nav">
                 <li class="sidebar-usermenu-item">
                     <a href="#">
@@ -37,48 +46,73 @@
                     Current Projects</a>
                 </li>
             </ul>
-        </div>
+        </div> -->
         <!-- END MENU -->
     </div>
-    <div class="col-md-8 page">
-        <div class="row text">
+    <div class="col-md-10 page">
+        <div class="row panel">
             <h2 class="section-title">About Me</h2>
             <hr>
             <p class="aboutme"> I am currently a first year Ph.D. student at Cornell University being advised by Professor <a href="http://www.cs.cornell.edu/~ragarwal/index.html">Rachit Agarwal</a>.</p>
 
             <p class="aboutme">My current research interests include <b>distributed systems, datacenter networking and peer-to-peer systems</b>.
 
-            <p class="aboutme">My current research focuses on understanding the feasability requirements of <b>resource disaggregated datacenters</b> and constructing systems that can yield their benefits. To that effect, I am working on <b>building an end-to-end storage management layer</b> for disaggregated storage.</p>
-        </div>
-        <div class="row">
-            <h2 class="section-title">Current Projects</h2>
-            <hr>
+            <p class="aboutme">My current research focuses on understanding the feasability requirements of <b>resource disaggregated datacenters</b> and constructing systems that can yield their benefits. I am currently working on methods for realizing storage disaggregation. To that effect, I am working on <b>building a datacenter-scale storage management layer for disaggregated storage.</b></p>
         </div>
 
-        <div class="row text">
-            <h2 class="section-title">Experience</h2>
-            <hr>
-            <div class="section-experience">
-                <div class="experience">
-                    <div class="experience-img"><img class="img-responsive" src="images/logos/msft.png"></div>
-                    <div class="experience-text"><p><b>Software Engineer Intern, Microsoft</b><br>Aliso Viejo, CA - Summer 2017</p></div>
-                </div>
-                <div class="experience">
-                    <div class="experience-img"><img class="img-responsive" src="images/logos/charmworks.png"></div>
-                    <div class="experience-text"><p><b>Software Engineer, Charmworks</b><br>Champaign, IL - Jan 2017 - May 2017</p></div>
-                </div>
-                <div class="experience">
-                    <div class="experience-img"><img class="img-responsive" src="images/logos/goog.png"></div>
-                    <div class="experience-text"><p><b>Software Engineer Intern, Google</b><br>Seattle, WA - Summer 2016</p></div>
+<!--        <div class="row panel">
+            <div class="col-md-6">
+                <h2 class="section-title">Experience</h2>
+                <hr>
+                <div class="section-experience">
+                    <div class="experience">
+                        <div class="experience-img"><img class="img-responsive" src="images/logos/msft.png"></div>
+                        <div class="experience-text"><p><b>Software Engineer Intern, Microsoft<br>Aliso Viejo, CA &middot; Summer 2017</p></div>
+                    </div>
+                    <div class="experience">
+                        <div class="experience-img"><img class="img-responsive" src="images/logos/charm.png"></div>
+                        <div class="experience-text"><p><b>Undergraduate Research Assistant</b><br><i>Parallel Programming Lab, University of Illinois</i><br>Champaign, IL &middot; Jan 2016 - May 2017</p></div>
+                    </div>
+                    <div class="experience">
+                        <div class="experience-img"><img class="img-responsive" src="images/logos/charmworks.png"></div>
+                        <div class="experience-text"><p><b>Software Engineer</b><br><i>Charmworks</i><br>Champaign, IL &middot; Jan 2017 - May 2017</p></div>
+                    </div>
+                    <div class="experience">
+                        <div class="experience-img"><img class="img-responsive" src="images/logos/goog.png"></div>
+                        <div class="experience-text"><p><b>Software Engineer Intern</b><br><i>Google</i><br>Seattle, WA &middot; Summer 2016</p></div>
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="col-md-6">
+                <h2 class="section-title">Teaching</h2>
+                <hr>
+                <div class="section-experience">
+                    <div class="experience">
+                        <div class="experience-img"><img class="img-responsive" src="images/logos/msft.png"></div>
+                        <div class="experience-text"><p><b>Introduction to Database Systems</b><br><i>Cornell University</i><br>Ithaca, NY &middot; Fall 2017</p></div>
+                    </div>
+                    <div class="experience">
+                        <div class="experience-img"><img class="img-responsive" src="images/logos/charm.png"></div>
+                        <div class="experience-text"><p><b>Data Structures</b><br><i>University of Illinois at Urbana-Champaign</i><br>Champaign, IL &middot; Jan 2016 - May 2017</p></div>
+                    </div>
+                    <div class="experience">
+                        <div class="experience-img"><img class="img-responsive" src="images/logos/charmworks.png"></div>
+                        <div class="experience-text"><p><b>Software Engineer</b><br><i>Charmworks</i><br>Champaign, IL &middot; Jan 2017 - May 2017</p></div>
+                    </div>
+                    <div class="experience">
+                        <div class="experience-img"><img class="img-responsive" src="images/logos/goog.png"></div>
+                        <div class="experience-text"><p><b>Software Engineer Intern</b><br><i>Google</i><br>Seattle, WA &middot; Summer 2016</p></div>
+                    </div>
+                </div>
+            </div>
+        </div>  -->
 
-    </div>
+    <!-- </div> -->
     <!-- </div> -->
     <!-- scripts -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/7d6346c2db.js"></script>
 </body>
 
 </html>
