--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
  <!-- Navigation -->
 <body>
-    <div class="sidebar-sidebar col-sm-2">
+    <div class="sidebar-sidebar col-md-2">
         <div class="sidebar-img">
             <img class="img-responsive mainpic" src="images/mainpic.jpg">
         </div>
