the real fix for mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
  <!-- Navigation -->
 <body>
-    <div class="sidebar-sidebar col-md-2">
+    <div class="sidebar-sidebar col-md-2 col-xs-12 col-sm-12">
         <div class="sidebar-img">
             <img class="img-responsive mainpic" src="images/mainpic.jpg">
         </div>
@@ -48,7 +48,7 @@
         </div> -->
         <!-- END MENU -->
     </div>
-    <div class="col-md-10 page">
+    <div class="col-md-10 page col-xs-12 col-sm-12">
         <div class="row panel">
             <h2 class="section-title">About Me</h2>
             <hr>
