--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 <div class="section-title">
                     <h2><i class="fa fa-user section-icon" aria-hidden="true"></i>About Me</h2>
                 </div>
-                <p class="aboutme"> I am currently a first year Ph.D. student at Cornell University being advised by Professor <a href="http://www.cs.cornell.edu/~ragarwal/index.html">Rachit Agarwal</a>.</p>
+                <p class="aboutme"> I am a first year Ph.D. student at Cornell University being advised by Professor <a href="http://www.cs.cornell.edu/~ragarwal/index.html">Rachit Agarwal</a>.</p>
 
-                <p class="aboutme">My current research interests include <b>distributed systems, datacenter networking and peer-to-peer systems</b>.</p>
+                <p class="aboutme">My research interests include <b>distributed systems, datacenter networking and peer-to-peer systems</b>.
 
-                <p class="aboutme">My current research focuses on understanding the feasability requirements of <b>resource disaggregated datacenters</b> and constructing systems that can yield their benefits. I am currently working on methods for realizing storage disaggregation. To that effect, I am working on <b>building a datacenter-scale storage management layer for disaggregated storage.</b></p>
+                <p class="aboutme">My research focuses on understanding the feasability requirements of <b>resource disaggregated datacenters</b> and building systems that can yield their benefits. I am currently working on methods for realizing storage disaggregation. To that effect, I am <b>building a datacenter-scale storage management layer for disaggregated storage.</b></p>
             </div>
             <div class="row panel">
                 <div class="col-md-12 col-xs-12 col-sm-12 half-panel">
