--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="page-wrapper">
         <div class="sidebar-sidebar col-md-2 col-xs-12 col-sm-12">
             <div class="sidebar-img">
-                <img class="img-responsive mainpic" src="images/mainpic.jpg">
+                <img class="img-responsive mainpic" src="images/mainpic2.jpg">
             </div>
             <div class="sidebar-name">Justin Miron</div>
             <div class="sidebar-title">PhD Student</div>
