--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <div class="sidebar-name">Justin Miron</div>
             <div class="sidebar-title">PhD Student</div>
             <div class="sidebar-uni">Cornell University</div>
+            <div class="sidebar-location">Gates Hall 322</div>
+
             <div class="sidebar-icons row">
                 <a href="mailto:justinmiron@cs.cornell.edu" class="sidebar-icon"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
                 <a href="https://github.com/jmiron11" class="sidebar-icon"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
