--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
                     <h4 class="teaching-uni">Cornell University</h4>
                     <ul class="list-unstyled exp">
                         <div class="teaching-title">
+                            <span class="exp-title-title"><b>CS 4450: Computer Networks</b> &middot; Teaching Assistant</span>
+                            <span class="exp-title-dates">Spring 2018</span>
+                        </div>
+                        <div class="teaching-title">
                             <span class="exp-title-title"><b>CS 4320: Database Systems</b> &middot; Teaching Assistant</span>
                             <span class="exp-title-dates">Fall 2017</span>
                         </div>
